# ImkonLMS

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  walkthrough.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  _shared.py  academic_years.py  config.py  grades.py  health.py  lessons.py  login.py  logout.py  parent.py  parents.py  quarters.py  stats.py  students.py  subjects.py  sync.py  teachers.py  timetable.py  tms.py  users.py  violations.py  yellow_cards.py
backend/app/api/routes/lessons/: __init__.py  _helpers.py  assessment.py  attendance.py  materials.py  schedule.py  sessions.py  (+2 more)
backend/app/commands/: create_first_superuser.py
backend/app/core/: config.py  db.py  enums.py  exceptions.py  formatting.py  lifespan.py  logging_utils.py  observability.py  pagination.py  rate_limit.py  security.py  setup.py  uploads.py
backend/app/crud/: __init__.py  academic_years.py  base.py  grades.py  lessons.py  quarters.py  refresh_tokens.py  subjects.py  timetable.py  users.py
backend/app/migrations/: baseline_2026_05_13.sql  env.py
backend/app/migrations/versions/: 0f7c77e0507b_remove_monthly_fee.py  197c9696e4da_match_payment_student_fields.py  20dfa332b74a_initial_user_model.py  39976fbc27b4_add_student_fields_to_user_model.py  7fa0be26d7eb_add_grade_subject_tables_and_soft_delete.py  a1b2c3d4e5f6_partial_unique_indexes.py  a1b2c3d4e5f7_add_lesson_session_tables.py  a6b5bffd0402_cleanup_remove_unused_columns.py  a7b8c9d0e1f2_add_lesson_plan_fields.py  b2c3d4e5f6a7_add_teaching_grade_ids.py  b3c8f1a2d5e7_add_teacher_fields.py  c3d4e5f6a7b8_attendance_unmarked_default.py  c4d9e2f3a6b8_add_sync_log_table.py  d4e5f6a7b8c9_add_topic_homework_to_lesson_session.py  d5e6f7a8b9c0_add_academic_year_table.py  e5f6a7b8c9d0_add_lesson_material_table.py  e6f7a8b9c0d1_add_timetable_tables.py  f6a7b8c9d0e1_make_started_at_nullable.py  f7a8b9c0d1e2_cascade_time_slot_fk.py  g8h9i0j1k2l3_add_room_to_schedule_entry.py  h9i0j1k2l3m4_lesson_session_schedule_entry_set_null.py  i0j1k2l3m4n5_add_quarter_table.py  j1k2l3m4n5o6_add_quarter_holidays.py  k2l3m4n5o6p7_rename_attendance_statuses.py  l3m4n5o6p7q8_drop_grade_from_session_attendance.py  m4n5o6p7q8r9_add_yellow_card_system.py  m4n5o6p7q8r9_restrict_student_violation_fk.py  n5o6p7q8r9s0_add_violation_tables.py  o6p7q8r9s0t1_separate_lesson_plan_table.py  p7q8r9s0t1u2_add_homework_test_id_to_lesson_plan.py  q8r9s0t1u2v3_add_parent_auth_table.py  r9s0t1u2v3w4_restrict_student_violation_fk.py  s0t1u2v3w4x5_add_refresh_token_table.py  t1u2v3w4x5y6_drop_yellow_card_system.py  u2v3w4x5y6z7_fix_lesson_plan_resources_jsonb.py  v3w4x5y6z7a8_drop_violation_tables.py  w4x5y6z7a8b9_add_session_assessment.py  x5y6z7a8b9c0_drop_school_settings_key.py  x5y6z7a8b9c0_tighten_assessment_ranges.py  y6z7a8b9c0d1_baseline_squash.py
backend/app/models/: __init__.py  academic_year.py  base.py  grade.py  lesson_material.py  lesson_plan.py  lesson_session.py  parent_auth.py  quarter.py  refresh_token.py  schedule_entry.py  school_settings.py  session_assessment.py  session_attendance.py  subject.py  sync_log.py  time_slot.py  user.py  violation_report.py  violation_type.py  yellow_card.py
backend/app/schemas/: __init__.py  academic_year.py  base.py  grades.py  lessons.py  monitoring.py  parent.py  quarter.py  students.py  subjects.py  teachers.py  timetable.py  users.py  violations.py  yellow_cards.py
(+160 files in other folders)
