[project]
name = "imkon-lms"
version = "0.1.0"
description = "Learning Management System for IMKON Liderlar Maktabi"
authors = [{ name = "Abdulkhay Payziev", email = "abdulkhay.payziev@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.13, <3.14"
dependencies = [
    "pydantic[email]>=2.6.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.27.0",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "pyjwt[crypto]>=2.8.0",
    "SQLAlchemy>=2.0.25",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.3",
    "bcrypt>=4.1.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.2",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.13",
    "pre-commit>=4.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["app/"]

[tool.hatch.build.targets.wheel]
include = ["app/"]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["F", "E", "W", "C", "UP", "I"]
ignore = ["E402", "UP006", "UP007", "E741"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
