[project]
name = "imkon-lms"
version = "0.1.0"
description = "Learning Management System for IMKON Liderlar Maktabi"
authors = [{ name = "Abdulkhay Payziev", email = "abdulkhay.payziev@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.13, <3.14"
dependencies = [
    "pydantic[email]>=2.6.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.27.0",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "pyjwt[crypto]>=2.8.0",
    "SQLAlchemy>=2.0.25",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.3",
    "bcrypt>=4.1.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.0",
    "filetype>=1.2.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.2",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.13",
    "pre-commit>=4.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["app/"]

[tool.hatch.build.targets.wheel]
include = ["app/"]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 130
fix = true

[tool.ruff.lint]
select = ["F", "E", "W", "C", "UP", "I"]
ignore = [
    "E402",   # module-level import not at top (used in some test/conftest cases)
    "E741",   # ambiguous variable name (l, I, O) — false positives in math/grading code
    "UP006",  # use builtin generics — kept for SQLAlchemy/Pydantic compat
    "UP007",  # X | Y union — same reason
    "UP040",  # use StrEnum — UserRole/SessionStatus deliberately use str+Enum mixin
    "UP042",  # str+Enum mixin — kept for SQLAlchemy String column compat
    "UP046",  # generic class type-param syntax — Pydantic Generics still need explicit form
    "UP047",  # generic function type-param syntax — same
    "C901",   # function-too-complex — sync/stats are intentionally large pipelines
]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy Mapped["X"] forward refs resolved at class-registry time.
"app/models/*.py" = ["F821"]
# Models package re-exports types for Alembic autogenerate.
"app/models/__init__.py" = ["F401"]
# Sync logic uses dynamic dict patterns and long schema declarations.
"app/api/routes/sync.py" = ["F821"]
"app/migrations/versions/*.py" = ["E501", "W291"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
